src/gen/GrammarParser.java
// Generated from C:/Users/HP/IdeaProjects/EjemploBaseGramatica-Armando\Grammar.g4 by ANTLR 4.9.2


    import java.util.Map;
    import java.util.HashMap;
    import java.util.List;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, VAR=2, PRINTLN=3, IF=4, ELSE=5, WHILE=6, SQUARE=7, POW=8, DO=9, 
		COMA=10, PLUS=11, MINUS=12, MULTI=13, DIVI=14, AND=15, OR=16, NOT=17, 
		GT=18, LT=19, GEQ=20, LEQ=21, EQ=22, NEQ=23, ASSING=24, BRACKET_OPEN=25, 
		BRACKET_CLOSE=26, PAR_OPEN=27, PAR_CLOSE=28, SEMICOLON=29, BOOLEAN=30, 
		COMILLAS=31, ID=32, CADE=33, NUMBER=34, WS=35;
	public static final int
		RULE_program = 0, RULE_sentence = 1, RULE_var_decl = 2, RULE_var_assing = 3, 
		RULE_println = 4, RULE_conditional = 5, RULE_cyclical = 6, RULE_docyclical = 7, 
		RULE_square = 8, RULE_pow = 9, RULE_expression = 10, RULE_factor = 11, 
		RULE_term = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sentence", "var_decl", "var_assing", "println", "conditional", 
			"cyclical", "docyclical", "square", "pow", "expression", "factor", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'var'", "'println'", "'if'", "'else'", "'while'", 
			"'square'", "'pow'", "'do'", "','", "'+'", "'-'", "'*'", "'/'", "'&&'", 
			"'||'", "'!'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", "'{'", 
			"'}'", "'('", "')'", "';'", null, "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "VAR", "PRINTLN", "IF", "ELSE", "WHILE", "SQUARE", "POW", 
			"DO", "COMA", "PLUS", "MINUS", "MULTI", "DIVI", "AND", "OR", "NOT", "GT", 
			"LT", "GEQ", "LEQ", "EQ", "NEQ", "ASSING", "BRACKET_OPEN", "BRACKET_CLOSE", 
			"PAR_OPEN", "PAR_CLOSE", "SEMICOLON", "BOOLEAN", "COMILLAS", "ID", "CADE", 
			"NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Map<String, Object> sTable = new HashMap<String, Object>();

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public SentenceContext sentence;
		public TerminalNode PROGRAM() { return getToken(GrammarParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(GrammarParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(GrammarParser.BRACKET_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(PROGRAM);
			setState(27);
			match(ID);
			setState(28);
			match(BRACKET_OPEN);

			                List<ASTNode> body = new ArrayList<ASTNode>();
			                Map<String, Object> sTable = new HashMap<String, Object>();
			            
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << WHILE) | (1L << SQUARE) | (1L << POW) | (1L << DO) | (1L << ID))) != 0)) {
				{
				{
				setState(30);
				((ProgramContext)_localctx).sentence = sentence();
				 body.add(((ProgramContext)_localctx).sentence.node); 
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(BRACKET_CLOSE);

			    for(ASTNode n : body)
			    {
			        n.execute(sTable);
			    }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public ASTNode node;
		public Var_declContext var_decl;
		public Var_assingContext var_assing;
		public PrintlnContext println;
		public ConditionalContext conditional;
		public CyclicalContext cyclical;
		public DocyclicalContext docyclical;
		public SquareContext square;
		public PowContext pow;
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Var_assingContext var_assing() {
			return getRuleContext(Var_assingContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public CyclicalContext cyclical() {
			return getRuleContext(CyclicalContext.class,0);
		}
		public DocyclicalContext docyclical() {
			return getRuleContext(DocyclicalContext.class,0);
		}
		public SquareContext square() {
			return getRuleContext(SquareContext.class,0);
		}
		public PowContext pow() {
			return getRuleContext(PowContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((SentenceContext)_localctx).var_decl = var_decl();
				   ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).var_decl._var;     
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((SentenceContext)_localctx).var_assing = var_assing();
				   ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).var_assing._var;   
				}
				break;
			case PRINTLN:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				((SentenceContext)_localctx).println = println();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).println.node;        
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				((SentenceContext)_localctx).conditional = conditional();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).conditional.node;    
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				((SentenceContext)_localctx).cyclical = cyclical();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).cyclical.node;       
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				((SentenceContext)_localctx).docyclical = docyclical();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).docyclical.node;     
				}
				break;
			case SQUARE:
				enterOuterAlt(_localctx, 7);
				{
				setState(59);
				((SentenceContext)_localctx).square = square();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).square.node;         
				}
				break;
			case POW:
				enterOuterAlt(_localctx, 8);
				{
				setState(62);
				((SentenceContext)_localctx).pow = pow();
				 ((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).pow.node;            
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public ASTNode _var;
		public Token ID;
		public TerminalNode VAR() { return getToken(GrammarParser.VAR, 0); }
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(VAR);
			setState(68);
			((Var_declContext)_localctx).ID = match(ID);
			setState(69);
			match(SEMICOLON);

			        ((Var_declContext)_localctx)._var =  new VarDecl((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assingContext extends ParserRuleContext {
		public ASTNode _var;
		public Token ID;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode ASSING() { return getToken(GrammarParser.ASSING, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public Var_assingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVar_assing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVar_assing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitVar_assing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_assingContext var_assing() throws RecognitionException {
		Var_assingContext _localctx = new Var_assingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_assing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			((Var_assingContext)_localctx).ID = match(ID);
			setState(73);
			match(ASSING);
			setState(74);
			((Var_assingContext)_localctx).expression = expression();
			setState(75);
			match(SEMICOLON);

			        ((Var_assingContext)_localctx)._var =  new VarAssing((((Var_assingContext)_localctx).ID!=null?((Var_assingContext)_localctx).ID.getText():null), ((Var_assingContext)_localctx).expression.node);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public TerminalNode PRINTLN() { return getToken(GrammarParser.PRINTLN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPrintln(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitPrintln(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintlnContext println() throws RecognitionException {
		PrintlnContext _localctx = new PrintlnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_println);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(PRINTLN);
			setState(79);
			((PrintlnContext)_localctx).expression = expression();
			setState(80);
			match(SEMICOLON);

			        ((PrintlnContext)_localctx).node =  new Println(((PrintlnContext)_localctx).expression.node);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public SentenceContext s1;
		public SentenceContext s2;
		public TerminalNode IF() { return getToken(GrammarParser.IF, 0); }
		public TerminalNode PAR_OPEN() { return getToken(GrammarParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(GrammarParser.PAR_CLOSE, 0); }
		public List<TerminalNode> BRACKET_OPEN() { return getTokens(GrammarParser.BRACKET_OPEN); }
		public TerminalNode BRACKET_OPEN(int i) {
			return getToken(GrammarParser.BRACKET_OPEN, i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(GrammarParser.BRACKET_CLOSE); }
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(GrammarParser.BRACKET_CLOSE, i);
		}
		public TerminalNode ELSE() { return getToken(GrammarParser.ELSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitConditional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitConditional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(IF);
			setState(84);
			match(PAR_OPEN);
			setState(85);
			((ConditionalContext)_localctx).expression = expression();
			setState(86);
			match(PAR_CLOSE);

			                        List<ASTNode> body = new ArrayList<ASTNode>();
			                        List<ASTNode> bodyElse = new ArrayList<ASTNode>();
			                        ((ConditionalContext)_localctx).node =  new If(((ConditionalContext)_localctx).expression.node, body, bodyElse);
			                    
			setState(88);
			match(BRACKET_OPEN);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << WHILE) | (1L << SQUARE) | (1L << POW) | (1L << DO) | (1L << ID))) != 0)) {
				{
				{
				setState(89);
				((ConditionalContext)_localctx).s1 = sentence();
				 body.add(((ConditionalContext)_localctx).s1.node); 
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(BRACKET_CLOSE);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(98);
				match(ELSE);
				setState(99);
				match(BRACKET_OPEN);
				{
				setState(100);
				((ConditionalContext)_localctx).s2 = sentence();
				 bodyElse.add(((ConditionalContext)_localctx).s2.node); 
				}
				setState(103);
				match(BRACKET_CLOSE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CyclicalContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression;
		public SentenceContext s1;
		public TerminalNode WHILE() { return getToken(GrammarParser.WHILE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(GrammarParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(GrammarParser.PAR_CLOSE, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(GrammarParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(GrammarParser.BRACKET_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public CyclicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cyclical; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterCyclical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitCyclical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitCyclical(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CyclicalContext cyclical() throws RecognitionException {
		CyclicalContext _localctx = new CyclicalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cyclical);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(WHILE);
			setState(108);
			match(PAR_OPEN);
			setState(109);
			((CyclicalContext)_localctx).expression = expression();
			setState(110);
			match(PAR_CLOSE);

			                        List<ASTNode> body = new ArrayList<ASTNode>();
			                        ((CyclicalContext)_localctx).node =  new While(((CyclicalContext)_localctx).expression.node, body);
			                    
			setState(112);
			match(BRACKET_OPEN);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << WHILE) | (1L << SQUARE) | (1L << POW) | (1L << DO) | (1L << ID))) != 0)) {
				{
				{
				setState(113);
				((CyclicalContext)_localctx).s1 = sentence();
				 body.add(((CyclicalContext)_localctx).s1.node); 
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocyclicalContext extends ParserRuleContext {
		public ASTNode node;
		public SentenceContext s1;
		public ExpressionContext expression;
		public TerminalNode DO() { return getToken(GrammarParser.DO, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(GrammarParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(GrammarParser.BRACKET_CLOSE, 0); }
		public TerminalNode WHILE() { return getToken(GrammarParser.WHILE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(GrammarParser.PAR_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(GrammarParser.PAR_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public DocyclicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_docyclical; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDocyclical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDocyclical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDocyclical(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocyclicalContext docyclical() throws RecognitionException {
		DocyclicalContext _localctx = new DocyclicalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_docyclical);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(DO);
			setState(124);
			match(BRACKET_OPEN);

			                        List<ASTNode> body = new ArrayList<ASTNode>();

			                    
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << PRINTLN) | (1L << IF) | (1L << WHILE) | (1L << SQUARE) | (1L << POW) | (1L << DO) | (1L << ID))) != 0)) {
				{
				{
				setState(126);
				((DocyclicalContext)_localctx).s1 = sentence();
				 body.add(((DocyclicalContext)_localctx).s1.node); 
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(BRACKET_CLOSE);
			setState(135);
			match(WHILE);
			setState(136);
			match(PAR_OPEN);
			setState(137);
			((DocyclicalContext)_localctx).expression = expression();
			setState(138);
			match(PAR_CLOSE);
			      ((DocyclicalContext)_localctx).node =  new DoRepeat(((DocyclicalContext)_localctx).expression.node, body);
